--- a/BikeShareProject/app/src/main/res/layout/activity_bike_info.xml
+++ b/BikeShareProject/app/src/main/res/layout/activity_bike_info.xml
@@ -4,6 +4,7 @@
                 android:layout_height="match_parent"
                 android:weightSum="3"
                 android:orientation="vertical">
+    <!-- Design of the top view of the BikeInfoActivity -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -17,23 +18,35 @@
         android:orientation="vertical"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp">
+            <!-- TextView showing the bike type of the selected bike -->
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/bike_type"
                 android:textSize="44sp"/>
+            <!-- TextView showing the price per hour for the selected bike -->
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/bike_price"
                 android:layout_marginTop="5dp"
                 android:textSize="44sp"/>
+            <!-- Button to go back to the StartRideFragment -->
+            <ImageButton
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/back_button"
+                android:layout_marginTop="5dp"
+                android:layout_marginLeft="10dp"
+                android:background="@color/colorButton"
+                android:src="@drawable/ic_back_button"/>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1">
+            <!-- ImageView showing a picture from the selected ride in the list -->
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -45,6 +58,7 @@
 
     </LinearLayout>
 
+    <!-- The border -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -55,6 +69,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1.95">
+        <!-- The fragment holding the list -->
         <FrameLayout
             android:id="@+id/ride_fragment_container"
             android:layout_width="match_parent"
