--- a/BikeShareProject/app/src/main/res/layout/activity_bike_map.xml
+++ b/BikeShareProject/app/src/main/res/layout/activity_bike_map.xml
@@ -12,7 +12,8 @@
         android:layout_height="0dp"
         android:layout_weight="6"
         android:layout_gravity="top">
-    <fragment
+        <!-- Fragment holding the map -->
+        <fragment
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:id="@+id/map"
@@ -31,7 +32,8 @@
         android:layout_height="0dp"
         android:layout_weight="3.8"
         android:layout_gravity="bottom">
-    <FrameLayout
+        <!-- Fragment holding either BikeListFragment, StartRideFragment or EndRideFragment -->
+        <FrameLayout
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
