--- a/BikeShareProject/app/src/main/res/layout/activity_bike_share.xml
+++ b/BikeShareProject/app/src/main/res/layout/activity_bike_share.xml
@@ -1,32 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/activity_bike_share"
     android:layout_width="match_parent"
-    android:layout_height="fill_parent"
-    android:background="@color/colorWhite">
+    android:layout_height="match_parent"
+    android:background="@color/colorWhite"
+    android:orientation="vertical"
+    android:weightSum="2">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:id="@+id/user_name"
-            android:textSize="70dp"/>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:id="@+id/user_balance"
-            android:layout_below="@+id/user_name"
-            android:textSize="50dp"/>
+    <!-- FrameLayout to hold the user info -->
+    <FrameLayout
+        android:id="@+id/UI_fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@color/colorWhite"
+        android:layout_weight="1"
+        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
-        <!-- Button to start the map activity -->
+        <!-- ImageButton to start the map activity -->
         <ImageButton
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/user_balance"
-            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            android:layout_gravity="center_horizontal"
             android:src="@drawable/bikeshare_find"
             android:id="@+id/find_bike"
             android:background="@null"/>
+    </LinearLayout>
 
-
-</RelativeLayout>
+</LinearLayout>
