--- a/BikeShareProject/app/src/main/res/layout/ride_list_item.xml
+++ b/BikeShareProject/app/src/main/res/layout/ride_list_item.xml
@@ -6,7 +6,7 @@
                 android:layout_marginBottom="2dp"
                 android:weightSum="5"
                 android:background="@color/colorWhite">
-    <!-- Rider -->
+    <!-- Rider (Header/Name) -->
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="100dp"
@@ -31,7 +31,7 @@
             android:textSize="20sp"/>
     </LinearLayout>
 
-    <!-- Start point -->
+    <!-- Start point (Header/Location/Time) -->
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="100dp"
@@ -65,7 +65,7 @@
 
     </LinearLayout>
 
-    <!-- End point -->
+    <!-- End point (Header/Location/Time)-->
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="100dp"
